force-app/main/default/objects/OpportunityPDERelation__c/OpportunityPDERelation__c.object-meta.xml
<CustomObject>
    <description>Objet de jonction entre les objets opportunités et PDE</description>
    <label>Opportunity PDE Relationship</label>
    <nameField>
        <displayFormat>OPR-{0000000}</displayFormat>
        <label>Opportunity PDE Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity PDE Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>