force-app/main/default/objects/OpportunityPDERelation__c/fields/PDE__c.field-meta.xml
<CustomField>
    <fullName>PDE__c</fullName>
    <label>Point d&apos;énergie</label>
    <referenceTo>PDE__c</referenceTo>
    <relationshipLabel>Opportunity PDE Relationships</relationshipLabel>
    <relationshipName>OpportunityPDERelationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>