force-app/main/default/objects/OpportunityPDERelation__c/fields/TECH_name__c.field-meta.xml
<CustomField>
    <fullName>TECH_name__c</fullName>
    <formula>PDE__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom</label>
    <type>Text</type>
</CustomField>