force-app/main/default/objects/OpportunityPDERelation__c/fields/TECH_PCE__c.field-meta.xml
<CustomField>
    <fullName>TECH_PCE__c</fullName>
    <description>Affiche le PCE ou la Réf point d&apos;energie du PDE associé</description>
    <formula>IF(ISBLANK(PDE__r.ReferencePointEnergie_Refonte__c ) , PDE__r.PCE_Refonte__c , PDE__r.ReferencePointEnergie_Refonte__c)</formula>
    <label>TECH PCE</label>
    <type>Text</type>
</CustomField>